<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HOMEWORK2</string>
    <string name="first_name">FirstName:</string>
    <string name="title">Title:</string>
    <string name="email">Email:</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="form_header">SEND EMAIL</string>
    <string name="back_btn">BACK</string>
    <string name="success_msg">You have successfully Registered</string>
    <string name="welcome"></string>
    <string name="header_reg">Registration Form</string>
    <string name="surname">SurName:</string>
</resources>